# nz

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
java/: build.gradle  settings.gradle
java/src/main/java/com/amanoteam/nz/cli/: Nz.java
src/: errors.c  errors.h  logging.c  main.c  nz-jni.c  program_help.h  query-jni.c  query.c  repository-jni.c  repository.c  repository.h
src/elfutils/: elfutils.c  elfutils.h  soname.h
src/fs/: mkdir.c
src/java/: build.gradle
src/java/src/main/java/com/amanoteam/nz/cli/: Nz.java
src/java/src/test/java/com/amanoteam/nz/cli/: NzCliTest.java
tools/: apt.sh  program_help.h.py  update-submodules.sh
